Update and optimize notebook
Change wording and include a quick summary of the steps taken.

--- a/tasks/Download 10x Seq T-cell Bundles/Download All Bundles for T-cells Sequenced with 10x.ipynb
+++ b/tasks/Download 10x Seq T-cell Bundles/Download All Bundles for T-cells Sequenced with 10x.ipynb
@@ -8,7 +8,15 @@
     "\n",
     "Suppose I want to get all bundles that contain T cells _and_ were sequenced using 10x. How should I go about doing this?\n",
     "\n",
-    "Well, the first thing we'll need is a query to search with. It might be a little more complicated than the ones we've used in previous vignettes, but the process overall is simple."
+    "For those short on time, here are the steps in a nutshell:\n",
+    "\n",
+    "> 1) Write an Elasticsearch query with a `bool` and a `must` query, and then add the conditions you want to specify within them (`match` or `reg_exp`, for example).\n",
+    "\n",
+    "> 2) Execute the `post_search` method using the Elasticsearch query you wrote, and from the search results get a bundle.\n",
+    "\n",
+    "> 3) If your search returned no results, it may be helpful try either **a)** examining a bundle closer to see what the fields look like, or **b)** disassembling your search and executing it one piece at a time.\n",
+    "\n",
+    "And now for the in-depth answer. First, we'll need a query to search with; it might be a little more complicated than the ones we've used in previous vignettes, but the process overall is simple."
    ]
   },
   {
@@ -288,7 +296,7 @@
    "source": [
     "Well, there's our answer! It would seem that there aren't any data on T cells anywhere in these four bundles, meaning there aren't any bundles containing data on both T cells and 10x sequencing.\n",
     "\n",
-    "Still, I'm not quite satisfied yet; I want to actually see some results from a compound query. Let's find a bundle with T cells and _mechanical_ sequencing, instead."
+    "Still, I'm not quite satisfied yet; I want to actually see some results from a compound query. One common practice of breaking down hematopoietic system tissue is by means of _mechanical_ dissociation. Maybe we can find some bundles with T cells and this method instead."
    ]
   },
   {
@@ -348,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There we go! Our query with two parameters worked. It look like all of the current bundles with T cell data have a _mechanical_ dissociation method. "
+    "There we go! Our query with two parameters worked. It looks like all of the current bundles with T cell data have a _mechanical_ dissociation method. "
    ]
   }
  ],
